--- a/notebooks/heliconius_gene_editing_dashboard.ipynb
+++ b/notebooks/heliconius_gene_editing_dashboard.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,16 +150,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/carlyn.1/miniconda3/envs/gtp/lib/python3.10/site-packages/torch/nn/modules/conv.py:549: UserWarning: Using padding='same' with even kernel lengths and odd dilation may require a zero-padded copy of the input be created (Triggered internally at ../aten/src/ATen/native/Convolution.cpp:1036.)\n",
-      "  return F.conv2d(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from copy import copy\n",
     "\n",
@@ -316,15 +307,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 480)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from io import BytesIO\n",
     "from ipywidgets import HBox\n",
@@ -443,7 +426,7 @@
     "class ModelEditPCAProjectionView(ModelPCAProjectionView):\n",
     "    def _get_model_input(self, camid):\n",
     "        input_x = super()._get_model_input(camid)\n",
-    "        loc = 0\n",
+    "        loc = current_gene_state.index\n",
     "        edit_gene_str = edit_btns.value\n",
     "        if edit_gene_str == \"AA\":\n",
     "            edit_vec = torch.tensor([0, 0, 1])\n",
@@ -525,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,97 +533,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64fc866ff81b4ef19069fca4afb005d0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='CAMID', options=(np.str_('CAM016019'), np.str_('CAM016020'), np.str_('CAM016021'), np.st…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0e54107962348e8ac7e16f0a9cbda4e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(FigureWidget({\n",
-       "    'data': [{'marker': {'color': [#0000aa, #0000aa, #0000aa, ..., #0000aa,\n",
-       "    …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a45715de15244a49df895680ac1ba0f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value='', description='Current Gene', disabled=True, layout=Layout(width='100%'), placeholder='Gene')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d8d611d97dd4faf9112a41f18555666",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Label(value='Gene Edit'), RadioButtons(options=('aa', 'aA/Aa', 'AA'), value='aa')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ae5451fcbb248e59ac7565e2bfa3609",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Window Size', options=(0, 10000, 20000, 30000, 40000, 50000, 60000, 70000, 80000, 90000,…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a3717a9b45045d48fba134dddcdc65c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "TwoByTwoLayout(children=(HBox(children=(FigureWidget({\n",
-       "    'data': [{'cells': {'values': [[-20.97, -18.23, 4.9…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(camid_dropdown_widget)\n",
     "display(manhattan_plot.display_box)\n",
