Updates to gene editing dashboard

--- a/notebooks/heliconius_gene_editing_dashboard.ipynb
+++ b/notebooks/heliconius_gene_editing_dashboard.ipynb
@@ -46,6 +46,7 @@
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "device = \"cuda\"\n",
     "\n",
+    "\n",
     "class GeneEditingDashboardState:\n",
     "    def __init__(\n",
     "        self,\n",
@@ -71,20 +72,22 @@
     "    def load_data_and_model(self):\n",
     "        match self.exp_name:\n",
     "            case \"base\":\n",
-    "                drop_out_prob=0.75\n",
-    "                out_dims=1\n",
-    "                out_dims_start_idx=0\n",
-    "                insize=3\n",
-    "                hidden_dim=10\n",
+    "                drop_out_prob = 0.75\n",
+    "                out_dims = 1\n",
+    "                out_dims_start_idx = 0\n",
+    "                insize = 3\n",
+    "                hidden_dim = 10\n",
     "            case \"pca_10\":\n",
-    "                drop_out_prob=0.75\n",
-    "                out_dims=10\n",
-    "                out_dims_start_idx=0\n",
-    "                insize=3\n",
-    "                hidden_dim=10\n",
+    "                drop_out_prob = 0.75\n",
+    "                out_dims = 10\n",
+    "                out_dims_start_idx = 0\n",
+    "                insize = 3\n",
+    "                hidden_dim = 10\n",
     "            case _:\n",
-    "                raise NotImplementedError(f\"Experiment {self.exp_name} isn't implemented for this visualization. Please create a case and update configs.\")\n",
-    "        \n",
+    "                raise NotImplementedError(\n",
+    "                    f\"Experiment {self.exp_name} isn't implemented for this visualization. Please create a case and update configs.\"\n",
+    "                )\n",
+    "\n",
     "        opts: ProcessAttributionOptions = ProcessAttributionOptions(\n",
     "            drop_out_prob=drop_out_prob,\n",
     "            out_dims=out_dims,\n",
@@ -155,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,9 +206,13 @@
     "\n",
     "    return attr\n",
     "\n",
+    "\n",
     "debug_output_box = widgets.Textarea(value=\"\", disabled=True)\n",
+    "\n",
+    "\n",
     "def debug_log(txt):\n",
     "    debug_output_box.value += f\"\\n{txt}\"\n",
+    "\n",
     "\n",
     "@dataclass\n",
     "class CurrentGeneState:\n",
@@ -251,6 +258,7 @@
     "    disable=False,\n",
     ")\n",
     "\n",
+    "\n",
     "class ManhattanPlotInteractive:\n",
     "    def __init__(self):\n",
     "        self.display_box = VBox([])\n",
@@ -267,7 +275,7 @@
     "        self.top_Y = self.Y[self.top_n_idx]\n",
     "\n",
     "        self.update_plot()\n",
-    "        \n",
+    "\n",
     "    def _update_window_lines(self):\n",
     "        window_size = int(window_size_dd.value)\n",
     "        # Remove old lines if they exist\n",
@@ -281,7 +289,17 @@
     "            self.figure_widget.add_vline(x=max_x, line_color=\"orange\")\n",
     "\n",
     "    def update_plot(self, *args):\n",
-    "        self.figure_widget = go.FigureWidget([go.Scatter(x=self.top_X, y=self.top_Y, mode=\"markers\")])\n",
+    "        self.figure_widget = go.FigureWidget(\n",
+    "            [go.Scatter(x=self.top_X, y=self.top_Y, mode=\"markers\")]\n",
+    "        )\n",
+    "        self.figure_widget.update_layout(\n",
+    "            title=dict(\n",
+    "                text=f\"Model Attribution Plot - Chromosome {gene_editing_dashboard_state.chromosome} - {gene_editing_dashboard_state.species} - {gene_editing_dashboard_state.color}\"\n",
+    "            ),\n",
+    "            xaxis=dict(title=dict(text=\"Gene Location\")),\n",
+    "            yaxis=dict(title=dict(text=\"Model Attribution\")),\n",
+    "            font=dict(family=\"Impact\", size=18, color=\"RebeccaPurple\"),\n",
+    "        )\n",
     "        self._update_window_lines()\n",
     "\n",
     "        # Set Initial Colors\n",
@@ -325,6 +343,7 @@
     "\n",
     "        self._update_window_lines()\n",
     "\n",
+    "\n",
     "manhattan_plot = ManhattanPlotInteractive()\n",
     "\n",
     "camid_dropdown_widget.observe(manhattan_plot.update_data, \"value\")\n",
@@ -334,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -432,6 +451,7 @@
     "\n",
     "        self.display_box.children = [self.figure_widget, self.proj_img]\n",
     "\n",
+    "\n",
     "def get_model_pca_view(input_x, camid):\n",
     "    output = get_model_output(input_x)\n",
     "    pca_output = output.detach().cpu().numpy()\n",
@@ -439,6 +459,7 @@
     "    pca_vector = get_org_pca_vector(camid)\n",
     "    pca_vector[0, :D] = pca_output\n",
     "    return pca_vector\n",
+    "\n",
     "\n",
     "class OrgPCAProjectionView(PCAProjectionView):\n",
     "    def _update_data(self):\n",
@@ -468,7 +489,7 @@
     "        loc = current_gene_state.index\n",
     "        edit_gene_str = edit_btns.value\n",
     "        ws = window_size_dd.value\n",
-    "        \n",
+    "\n",
     "        if edit_gene_str == \"AA\":\n",
     "            edit_vec = torch.tensor([0, 0, 1])\n",
     "        elif edit_gene_str == \"aa\":\n",
@@ -546,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,13 +583,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3360b474ed1b4654ae1308a600552435",
+       "model_id": "83180c1155c54a2ab6c55907fcd5bba2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -582,7 +603,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eec834fde41d4b98956c1678ceda57f8",
+       "model_id": "e11abea16b984cacbf0b01f5caf69e15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -596,7 +617,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99093f42190b48a1a710c7035fdedeb0",
+       "model_id": "87954c256cbb483b885e8c2b4c546fce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -612,7 +633,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15d4e55e2ded40a4b1d021e8df809128",
+       "model_id": "c2e0792961c04b15aa62674cd0201e12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -626,7 +647,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdefde0c234f4ba9b3c06b00cbad7da5",
+       "model_id": "9e635fdeb8cf4f5d8c26a5dbd94b86a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -640,7 +661,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2be87974e244103b93ce64f304e3719",
+       "model_id": "691bff19a08d490680962314e05187ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -654,7 +675,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7cd5c69ef1b416b906e76d6ac01f8e7",
+       "model_id": "8c0df1de7f0d44d983585d47a652d144",
        "version_major": 2,
        "version_minor": 0
       },
@@ -669,7 +690,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35c5a8c2d62e4c86bb9a5b6abf116a21",
+       "model_id": "c9a388ab342a4d10b75f4075ce6019bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -694,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +741,7 @@
     "ws = int(window_size_dd.value)\n",
     "num_of_edits = math.ceil(len(manhattan_plot.X) / (ws * 2))\n",
     "change_tracker = defaultdict(list)\n",
-    "for edit_num in tqdm(range(num_of_edits), desc=\"recording changes\", colour='#8822CC'):\n",
+    "for edit_num in tqdm(range(num_of_edits), desc=\"recording changes\", colour=\"#8822CC\"):\n",
     "    x = min((edit_num * ws * 2) + ws, len(manhattan_plot.X))\n",
     "    current_gene_state.index = x\n",
     "    current_gene_state.text = f\"Position {x}\"\n",
