Editing dashboard updates

--- a/notebooks/heliconius_gene_editing_dashboard.ipynb
+++ b/notebooks/heliconius_gene_editing_dashboard.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "# SPECIFY GPU\n",
     "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"6\"\n",
     "device = \"cuda\"\n",
     "\n",
     "\n",
@@ -158,19 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ipywidgets as widgets\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ipywidgets as widgets\n",
     "from copy import copy\n",
     "from dataclasses import dataclass\n",
     "\n",
@@ -193,6 +185,7 @@
     "\n",
     "\n",
     "def get_attr(camid, target=0):\n",
+    "    gene_editing_dashboard_state.model.train()\n",
     "    att_model = LRP(gene_editing_dashboard_state.model)\n",
     "    gene_editing_dashboard_state.model.zero_grad()\n",
     "    x = get_model_input(camid)\n",
@@ -353,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,13 +576,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83180c1155c54a2ab6c55907fcd5bba2",
+       "model_id": "abbe4f7541d44626b7da8db96cb666b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -603,7 +596,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e11abea16b984cacbf0b01f5caf69e15",
+       "model_id": "293ba895e59844d79dae26a7dea3bf2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -617,7 +610,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87954c256cbb483b885e8c2b4c546fce",
+       "model_id": "5457896e156e47528aae76c1294d3f33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -633,7 +626,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2e0792961c04b15aa62674cd0201e12",
+       "model_id": "b9fbf26041124fb3a357d9b224a75edb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -647,7 +640,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e635fdeb8cf4f5d8c26a5dbd94b86a2",
+       "model_id": "3547c1c7c4c74165ae60424724727fea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -661,7 +654,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "691bff19a08d490680962314e05187ff",
+       "model_id": "60e22f8a26444b1baa82dba50ec00140",
        "version_major": 2,
        "version_minor": 0
       },
@@ -675,7 +668,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c0df1de7f0d44d983585d47a652d144",
+       "model_id": "7a5fa8c3e8e4489788f1f20ac8050466",
        "version_major": 2,
        "version_minor": 0
       },
@@ -690,7 +683,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9a388ab342a4d10b75f4075ce6019bb",
+       "model_id": "fdc51d99bb59401cbbe63406edd2b699",
        "version_major": 2,
        "version_minor": 0
       },
@@ -719,18 +712,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7700dfcf76bc4ffc9c8695ee9aa29f67",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "recording changes:   0%|          | 0/83 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtqdm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mauto\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tqdm\n\u001b[1;32m      5\u001b[0m ws \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(window_size_dd\u001b[38;5;241m.\u001b[39mvalue)\n\u001b[0;32m----> 6\u001b[0m num_of_edits \u001b[38;5;241m=\u001b[39m math\u001b[38;5;241m.\u001b[39mceil(\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmanhattan_plot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mws\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      7\u001b[0m change_tracker \u001b[38;5;241m=\u001b[39m defaultdict(\u001b[38;5;28mlist\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m edit_num \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28mrange\u001b[39m(num_of_edits), desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrecording changes\u001b[39m\u001b[38;5;124m\"\u001b[39m, colour\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m#8822CC\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
     }
    ],
    "source": [
@@ -754,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
