--- a/notebooks/preprocessing_pipeline.ipynb
+++ b/notebooks/preprocessing_pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "hostname = socket.gethostname()\n",
     "if hostname == Hosts.IMAGEOMICS_SERVER.value:\n",
     "    ROOT_PHENOTYPE_INPUT_DIR = Path(\"/local/scratch/carlyn.1/dna/colors\")\n",
-    "    ROOT_PHENOTYPE_OUTPUT_DIR = Path(\"/local/scratch/carlyn.1/dna/colors/processed\")\n",
+    "    ROOT_PHENOTYPE_OUTPUT_DIR = Path(\"/local/scratch/carlyn.1/dna/processed/phenotypes\")\n",
     "    ROOT_GENOTYPE_INPUT_DIR = Path(\"/local/scratch/carlyn.1/dna/vcfs\")\n",
     "    ROOT_GENOTYPE_OUTPUT_DIR = Path(\"/local/scratch/carlyn.1/dna/processed\")\n",
     "else:\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "\n",
     "for species in [\"erato\", \"melpomene\"]:\n",
     "    for wing in [\"forewings\", \"hindwings\"]:\n",
-    "        for color in [\"color_1\", \"color_2\", \"color_3\", \"total\"]:\n",
+    "        for color in [\"color_1\", \"color_2\", \"color_3\", \"total\", \"bioclip\"]:\n",
     "            suffix_path = f\"{species}_{wing}_PCA/PCA_{color}_loadings.csv\"\n",
     "            preprocessor.process(pca_csv_path_suffix=suffix_path)\n",
     "            preprocessor.save_result(f\"{species}_{wing}_{color}\")\n"
@@ -236,7 +236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "gtp",
    "language": "python",
    "name": "python3"
   },
@@ -250,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
