--- a/notebooks/extract-features.ipynb
+++ b/notebooks/extract-features.ipynb
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "4b654a83",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CAMID</th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>PC1</th>\n",
        "      <th>PC2</th>\n",
        "      <th>PC3</th>\n",
@@ -718,7 +718,7 @@
        "</div>"
       ],
       "text/plain": [
-       "         CAMID         PC1         PC2         PC3         PC4         PC5  \\\n",
+       "    Unnamed: 0         PC1         PC2         PC3         PC4         PC5  \\\n",
        "0  CAM016208_d   -8.400136   -11.94456   -8.356295   7.4958835  -2.0638025   \n",
        "1  CAM016648_d   6.0691085    9.564878    7.061248  -5.7866297    2.049564   \n",
        "2  CAM016866_d   5.0735335    3.241369   -6.284338  -0.3078553   -9.809408   \n",
@@ -749,7 +749,7 @@
        "[5 rows x 474 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,13 +760,13 @@
     "cam_ids = [f\"{path.stem}_d\" for path in dataset.image_paths]\n",
     "\n",
     "data = np.concatenate((np.array(cam_ids).reshape(-1, 1), pca_values), axis=1)\n",
-    "new_df = pd.DataFrame(data, columns=[\"CAMID\"] + [f\"PC{i+1}\" for i in range(pca_values.shape[1])])\n",
+    "new_df = pd.DataFrame(data, columns=[\"Unnamed: 0\"] + [f\"PC{i+1}\" for i in range(pca_values.shape[1])])\n",
     "new_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "ea622bf5",
    "metadata": {},
    "outputs": [],
