--- a/notebooks/extract-features.ipynb
+++ b/notebooks/extract-features.ipynb
@@ -998,7 +998,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gtp",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
