--- a/notebooks/preprocessing_pipeline.ipynb
+++ b/notebooks/preprocessing_pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,6 +232,77 @@
     "    success = future.result()\n",
     "    progress_bar.update(1)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Splitting data per individual: 100%|\u001b[38;2;158;39;118m██████████\u001b[0m| 38/38 [04:23<00:00,  6.94s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from collections import defaultdict\n",
+    "from enum import Enum\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "class DNA_SCOPE(Enum):\n",
+    "    GENOME = \"genome\"\n",
+    "    CHROMOSOME = \"chromosomes\"\n",
+    "    GENE = \"genes\"\n",
+    "\n",
+    "\n",
+    "THIS_DNA_SCOPE = DNA_SCOPE.GENOME.value\n",
+    "\n",
+    "species = \"melpomene\"\n",
+    "data_dir = Path(ROOT_GENOTYPE_OUTPUT_DIR, \"genotypes\", \"genome\", species)\n",
+    "path_data = []\n",
+    "for root, dirs, files in data_dir.walk():\n",
+    "    if \"ml_ready.npy\" in files:\n",
+    "        scaffold = root.parts[-1]\n",
+    "        if species == \"erato\":\n",
+    "            chrom_info = scaffold.replace(\"Herato\", \"\")\n",
+    "            scaf_num = int(chrom_info)\n",
+    "        elif species == \"melpomene\":\n",
+    "            chrom_info = scaffold.replace(\"Hmel2\", \"\")\n",
+    "            scaf_num = int(chrom_info[:-1])\n",
+    "        \n",
+    "        path_data.append([root, scaf_num])\n",
+    "    \n",
+    "path_data = sorted(path_data, key=lambda x: x[1])\n",
+    "    \n",
+    "prev_camids = None\n",
+    "\n",
+    "output_dir = Path(\"/local/scratch/carlyn.1/dna/processed/genotypes/genome_individuals\", species)\n",
+    "#output_dir = Path(f\"/local/scratch/carlyn.1/dna/vcfs/{species}/genome_individuals\")\n",
+    "output_dir.mkdir(exist_ok=True)\n",
+    "for root, _ in tqdm(path_data, desc=\"Splitting data per individual\", colour=\"#9E2776\"):\n",
+    "    if \"ml_ready.npy\" in files:\n",
+    "        # Assert aligned CAMIDS\n",
+    "        camids = np.load(root / \"camids.npy\")\n",
+    "        if prev_camids is not None:\n",
+    "            assert (camids == prev_camids).all()\n",
+    "        prev_camids = camids\n",
+    "        \n",
+    "        ml_data = np.load(root / \"ml_ready.npy\")\n",
+    "        \n",
+    "        for camid, row in zip(camids, ml_data):\n",
+    "            tgt_file = output_dir / f\"{camid}.npy\"\n",
+    "            if tgt_file.exists():\n",
+    "                ind_data = np.load(tgt_file)\n",
+    "                ind_data = np.concatenate((ind_data, row), axis=0)\n",
+    "                np.save(tgt_file, ind_data)\n",
+    "            else:\n",
+    "                np.save(tgt_file, row)\n",
+    "        \n",
+    "            "
+   ]
   }
  ],
  "metadata": {
@@ -250,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
