--- a/notebooks/heliconius_gene_editing_dashboard.ipynb
+++ b/notebooks/heliconius_gene_editing_dashboard.ipynb
@@ -141,8 +141,8 @@
     "gene_editing_dashboard_state = GeneEditingDashboardState(\n",
     "    wing=\"forewings\",\n",
     "    species=\"erato\",\n",
-    "    color=\"color_1\",\n",
-    "    chromosome=13,\n",
+    "    color=\"total\",\n",
+    "    chromosome=10,\n",
     "    exp_name=\"pca_10\",\n",
     "    config_path=Path(\"../configs/default.yaml\"),\n",
     ")"
@@ -245,7 +245,7 @@
     "gene_edit_btns = HBox([edit_lbl, edit_btns])\n",
     "\n",
     "window_size_dd = widgets.Dropdown(\n",
-    "    options=list(range(0, 100001, 10000)),\n",
+    "    options=list(range(0, 1001, 10)),\n",
     "    value=0,\n",
     "    description=\"Window Size\",\n",
     "    disable=False,\n",
@@ -365,6 +365,8 @@
     "    species = gene_editing_dashboard_state.species\n",
     "    wing = gene_editing_dashboard_state.wing\n",
     "    color = gene_editing_dashboard_state.color\n",
+    "    if color == \"total\":\n",
+    "        color = \"color_total\"\n",
     "    proj_matrices_dir = Path(cfgs.io.default_root, \"dna/projection_matrices\")\n",
     "    pca_df = pd.read_csv(proj_matrices_dir / f\"{species}_{wing}_{color}.csv\")\n",
     "    pca_w = pca_df.to_numpy()\n",
@@ -373,12 +375,17 @@
     "\n",
     "def create_proj_img_bytes(pca_w, pca_vector):\n",
     "    proj_img_m = pca_w @ pca_vector.T\n",
-    "    proj_img_m = proj_img_m.reshape(300, 300)  # Range between [-1, 1]\n",
+    "    print(proj_img_m.shape)\n",
+    "    if gene_editing_dashboard_state.color == \"total\":\n",
+    "        proj_img_m = proj_img_m.reshape(3, 300, 300)  # Range between [-1, 1]\n",
+    "        proj_img_m = np.transpose(proj_img_m, axes=(1, 2, 0))\n",
+    "    else:\n",
+    "        proj_img_m = proj_img_m.reshape(300, 300)  # Range between [-1, 1]\n",
     "    # proj_img_m += 1\n",
     "    # proj_img_m /= 2  # [0, 1]\n",
     "    proj_img_m[proj_img_m <= 0] = 0\n",
     "    proj_img_m[proj_img_m > 0] = 1\n",
-    "    im = Image.fromarray(np.uint8(cm.bwr(proj_img_m) * 255))\n",
+    "    im = Image.fromarray(np.uint8(proj_img_m * 255))\n",
     "\n",
     "    im_bytes = BytesIO()\n",
     "    im.save(im_bytes, format=\"PNG\")\n",
@@ -512,14 +519,16 @@
     "        edit_model_img = Image.open(self.model_edit_pca_proj_view.proj_img_bytes)\n",
     "\n",
     "        diff_img = (np.array(model_img) - np.array(edit_model_img)).astype(np.float64)\n",
-    "        diff_img = diff_img.sum(-1)\n",
-    "        diff_img -= diff_img.min()\n",
-    "        if diff_img.max() != 0:\n",
-    "            diff_img /= diff_img.max()\n",
+    "        diff_img = np.abs(diff_img).sum(-1)\n",
+    "        #diff_img -= diff_img.min()\n",
+    "        #if diff_img.max() != 0:\n",
+    "        #    diff_img /= diff_img.max()\n",
+    "        \n",
+    "        print(diff_img.min(), diff_img.max())\n",
     "\n",
     "        diff_img = Image.fromarray(\n",
     "            np.uint8(\n",
-    "                cm.bwr(\n",
+    "                cm.jet(\n",
     "                    diff_img,\n",
     "                )\n",
     "                * 255\n",
@@ -642,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
